More refinement on the directory structure

--- a/book/01gy_cpp/01gy_cpp.tex
+++ b/book/01gy_cpp/01gy_cpp.tex
@@ -17,6 +17,9 @@
 	A jegyzet \textbf{nem fedi le teljes mértékben az előadás és gyakorlat anyagát.} Ez azt jelenti, hogy a tárgy jó eredménnyel történő teljesítéséhez az előadáson és gyakorlaton megszerzett tudásra is szükség lesz. Például a programozási konvenciók, a programozási nyelvek történelme, és még megannyi anyagrész nem szerepel a jegyzetben, azonban ezeknek az ismerete fontos és elvárható egy programtervező informatikustól.
 	
 	\smallskip
+	A jegyzettel párhuzamosan készül egy gyakorlati feladatokat tartalmazó dokumentum is, mely az eredményes tanuláshoz szintén javallott!
+	
+	\smallskip
 	Hangsúlyozzuk, hogy a jegyzet elsősorban a vizsgára történő felkészülést hivatott segíteni. A vizsga közben a jegyzet használata szükséges gyakorlat nélkül nem elég.
 	
 	\smallskip
@@ -24,6 +27,12 @@
 	
 	Külön köszönet jár \textsc{Horváth} Gábornak, aki a jegyzet javításában segített és aktívan segít, és mindenki másnak, aki az esetleges hibák észrevétele után szóltak.
 	
+	\smallskip
+	A jegyzet teljes mértékben nyílt forráskódú, amennyiben esetleges hibába, pontatlanságba botlana, vagy szeretne segíteni az jegyzet fejlesztésében, az alábbi linken megteheti:
+	
+	\url{https://github.com/Szelethus/ELTE-IK-CPP}.
+	
+	\medskip
 	(Felhívnánk rá a figyelmet, hogy a szerkesztés jelen pillanatában a jegyzet nem teljes terjedelmében lektorált.)
 
 	\subsection{Szükséges háttértudás}
