--- a/exercise/exercise_book/exercise_book.tex
+++ b/exercise/exercise_book/exercise_book.tex
@@ -51,4 +51,5 @@ int main()
 	\tableofcontents
 	\pagebreak
 	\subfile{../01exercise_cpp/01exercise_cpp.tex}
+	\subfile{../02exercise_cpp/02exercise_cpp.tex}
 \end{document}
