Fixing the formatter script to handle different languages and styles

--- a/include/preamble.tex
+++ b/include/preamble.tex
@@ -121,6 +121,10 @@
 	commentstyle     = \itshape\color{yellow!40!black},
 }
 
+\lstdefinestyle{customcpreproc}{%
+  style = customc,
+}
+
 \lstset{
 	escapechar = @,
 	style      = customc, % Default code snippet style
