--- a/book/02extra_cpp/02extra_cpp.tex
+++ b/book/02extra_cpp/02extra_cpp.tex
@@ -448,7 +448,7 @@ int main()
 }
 		\end{lstlisting}
 		Kimenet ekkor:
-		\begin{lstlisting}
+		\begin{lstlisting}[language=bash]
 dtor y
 dtor y
 catch int main
